--- a/build.gradle
+++ b/build.gradle
@@ -81,8 +81,16 @@ project(':cts:all') {
 
 def BUILD_TOOLS = '/usr/local/google/home/christianw/Android/Sdk/build-tools/25.0.2'
 
+project(":cts:tests") {
+    task aar {
+    }
+}
+
 project(":cts:tests").subprojects.each { ctsProject ->
     configure(ctsProject) {
+        group = 'org.robolectric.android-cts'
+        version = 'SNAPSHOT'
+
         def isCommon = ctsProject.name == 'common'
 
         apply plugin: "java"
@@ -95,7 +103,7 @@ project(":cts:tests").subprojects.each { ctsProject ->
             }
         } else {
             sourceSets {
-                test.java.srcDirs = ['src', generatedSrcDir]
+                main.java.srcDirs = ['src', generatedSrcDir]
             }
         }
 
@@ -131,6 +139,33 @@ project(":cts:tests").subprojects.each { ctsProject ->
 
         tasks['compileJava'].dependsOn('aapt', 'renderscript')
 
+        jar {
+            archiveName 'classes.jar'
+
+//            [':cts-support', ':cts:libs:deviceutil', ':cts:common:device-side', ':cts:common:util'].forEach { depProj ->
+//                from(new File(project(depProj).buildDir, 'classes/main')) {
+//                    include '**/*.class'
+//                }
+//            }
+        }
+
+        task aar(type: Jar) {
+            dependsOn jar
+            
+            archiveName "${project.name}.aar"
+
+            from(project.file('.')) {
+                include 'res/**/*'
+                include '*.xml'
+            }
+
+            from(jar.destinationDir) {
+                include(new File(jar.archiveName).name)
+            }
+        }
+
+        project(':cts:tests').tasks['aar'].dependsOn aar
+
         dependencies {
             compile project(":cts-support")
             compile project(":robolectric")
@@ -158,9 +193,103 @@ project(":cts:tests").subprojects.each { ctsProject ->
     }
 }
 
+def ctsModules = [
+        'accounts',
+        'alarmclock',
+        'animation',
+        'app',
+        'app.usage',
+        'appwidget',
+        'assist',
+        'bionic',
+        'bluetooth',
+        'calendarcommon',
+        'calllog',
+        'car',
+        'carrierapi',
+        'content',
+        'database',
+        'deqp',
+        'display',
+        'dpi',
+        'dpi2',
+        'dreams',
+        'drm',
+        'effect',
+        'externalservice',
+        'externalservice:common',
+        'gesture',
+        'graphics',
+        'graphics2',
+        'hardware',
+        'icu',
+        'jni',
+        'keystore',
+        'libcorefileio',
+        'libcorelegacy22',
+        'libcoreoj',
+        'location',
+        'location2',
+        'media',
+        'mediastress',
+        'midi',
+        'multiuser',
+        'nativemedia',
+        'ndef',
+        'net',
+        'netsecpolicy',
+        'networksecurityconfig',
+        'opengl',
+        'openglperf',
+        'os',
+        'permission',
+        'permission2',
+        'preference',
+        'preference2',
+        'print',
+        'provider',
+        'renderscript',
+        'renderscriptlegacy',
+        'rsblas',
+        'rscpp',
+        'sax',
+        'security',
+        'shortcutmanager',
+        'shortcutmanager:common',
+        'simpleperf',
+        'speech',
+        'systemintents',
+        'systemui',
+        'telecom',
+        'telecom2',
+        'telecom3',
+        'telephony',
+        'telephony2',
+        'text',
+        'textureview',
+        'theme',
+        'toast',
+        'toastlegacy',
+        'transition',
+        'tv',
+        'uiautomation',
+        'uidisolation',
+        'uirendering',
+        'util',
+        'view',
+        'voiceinteraction',
+        'voiceinteraction:common',
+        'voicesettings',
+        'webkit',
+        'widget',
+        'wrap',
+]
+
 [
+        ':cts:tests:tests/appwidget',
         ':cts:tests:tests/car',
         ':cts:tests:tests/dpi2',
+        ':cts:tests:tests/icu',
         ':cts:tests:tests/keystore',
         ':cts:tests:tests/location',
         ':cts:tests:tests/media',
@@ -168,6 +297,8 @@ project(":cts:tests").subprojects.each { ctsProject ->
         ':cts:tests:tests/netsecpolicy',
         ':cts:tests:tests/networksecurityconfig',
         ':cts:tests:tests/os',
+        ':cts:tests:tests/permission',
+        ':cts:tests:tests/print',
         ':cts:tests:tests/renderscript',
         ':cts:tests:tests/rsblas',
         ':cts:tests:tests/rscpp',
@@ -182,11 +313,12 @@ project(":cts:tests").subprojects.each { ctsProject ->
         ':cts:tests:tests/toastlegacy',
         ':cts:tests:tests/uidisolation',
         ':cts:tests:tests/webkit',
-        ':cts:tests:tests/widget',
 ].forEach { name ->
     project(name) {
         renderscript { onlyIf { false } }
+        compileJava { onlyIf { false } } // relies on missing classes
         compileTestJava { onlyIf { false } } // relies on missing classes
+        jar { onlyIf { false } }
     }
 }
 
