--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -3,11 +3,14 @@ apply plugin: "groovy"
 repositories {
     mavenLocal()
     jcenter()
+
+    maven { url "https://plugins.gradle.org/m2/" } // for gradle-apt-plugin
 }
 
 dependencies {
     compile gradleApi()
     compile localGroovy()
 
+    compile "net.ltgt.gradle:gradle-apt-plugin:0.9"
     compile "org.ow2.asm:asm-tree:5.0.1"
 }
