Fixed some ResourcesTest CTS tests.

--- a/cts-support/src/main/resources/cts-results.yaml
+++ b/cts-support/src/main/resources/cts-results.yaml
@@ -474,13 +474,13 @@ classes:
       testGetDrawableForDensity: FAIL,
       testGetLayout: FAIL,
       testGetMovie: FAIL,
-      testGetQuantityString1: FAIL,
-      testGetQuantityString2: FAIL,
+      testGetQuantityString1: PASS,
+      testGetQuantityString2: PASS,
       testGetQuantityText: FAIL,
-      testGetValue: FAIL,
+      testGetValue: PASS,
       testGetValueForDensity: FAIL,
       testObtainAttributes: FAIL,
-      testRawResource: FAIL,
+      testRawResource: PASS,
       testGetString: PASS,
       testGetColorStateList: PASS,
       testGetColor: PASS,
