--- a/robolectric-processor/build.gradle
+++ b/robolectric-processor/build.gradle
@@ -10,6 +10,9 @@ dependencies {
     // Compile dependencies
     compile "com.google.guava:guava:20.0"
     compileOnly "com.google.code.findbugs:jsr305:3.0.1"
+    compile "com.google.code.gson:gson:2.8.0"
+    compile 'ch.raffael.pegdown-doclet:pegdown-doclet:1.3'
+
     compile files("${System.properties['java.home']}/../lib/tools.jar")
 
     // Testing dependencies
