--- a/build.gradle
+++ b/build.gradle
@@ -13,10 +13,13 @@ buildscript {
 
     dependencies {
         classpath 'com.netflix.nebula:gradle-aggregate-javadocs-plugin:2.2.+'
+        classpath 'ch.raffael.pegdown-doclet:pegdown-doclet:1.3'
     }
 }
 
 apply plugin: 'nebula-aggregate-javadocs'
+apply plugin: 'ch.raffael.pegdown-doclet'
+
 rootProject.gradle.projectsEvaluated {
     rootProject.tasks['aggregateJavadocs'].failOnError = false
 }
