--- a/integration-tests/mockito/build.gradle
+++ b/integration-tests/mockito/build.gradle
@@ -4,12 +4,13 @@ dependencies {
     compile project(":robolectric")
     compile "junit:junit:4.12"
     compileOnly AndroidSdk.MAX_SDK.coordinates
-    compile "com.android.support:support-v4:23.2.0"
+    compile "com.android.support:support-compat:26.0.0-alpha1"
+    compile "com.android.support:support-fragment:26.0.0-alpha1"
 
     // Testing dependencies
     testRuntime AndroidSdk.MAX_SDK_FOR_THIS_JDK.coordinates
-    testCompile "com.android.support:support-v4:23.2.0"
-    testCompile "com.android.support:internal_impl:23.2.0"
+    testCompile "com.android.support:support-compat:26.0.0-alpha1"
+    testCompile "com.android.support:support-fragment:26.0.0-alpha1"
     testCompile "org.assertj:assertj-core:2.6.0"
     testCompile "org.mockito:mockito-core:2.5.4"
 }
