Explicitly set maven artifact names for every deployed gradle build.

--- a/annotations/build.gradle
+++ b/annotations/build.gradle
@@ -3,6 +3,7 @@ plugins {
 }
 
 new RoboJavaModulePlugin(
+        artifactName: 'robolectric-annotations',
         deploy: true
 ).apply(project)
 
