--- a/shadows/httpclient/build.gradle
+++ b/shadows/httpclient/build.gradle
@@ -3,6 +3,7 @@ plugins {
 }
 
 new RoboJavaModulePlugin(
+        artifactName: 'shadows-httpclient',
         deploy: true
 ).apply(project)
 
@@ -31,13 +32,6 @@ dependencies {
     testCompile "org.assertj:assertj-core:3.8.0"
     testCompile "org.mockito:mockito-core:2.5.4"
     testRuntime AndroidSdk.LOLLIPOP_MR1.coordinates
-}
-
-// change local artifact name to match dependencies
-install {
-    repositories.mavenInstaller {
-        pom.artifactId = 'shadows-httpclient'
-    }
 }
 
 // httpcore needs to come before android-all on runtime classpath; the gradle IntelliJ plugin
