--- a/shadows/maps/build.gradle
+++ b/shadows/maps/build.gradle
@@ -3,6 +3,7 @@ plugins {
 }
 
 new RoboJavaModulePlugin(
+        artifactName: 'shadows-maps',
         deploy: true
 ).apply(project)
 
@@ -26,11 +27,4 @@ dependencies {
     testCompile "org.mockito:mockito-core:2.5.4"
     testRuntime AndroidSdk.MAX_SDK_FOR_THIS_JDK.coordinates
     testRuntime "com.google.android.maps:maps:23_r1"
-}
-
-// change local artifact name to match dependencies
-install {
-    repositories.mavenInstaller {
-        pom.artifactId = 'shadows-maps'
-    }
 }
