--- a/shadows/supportv4/build.gradle
+++ b/shadows/supportv4/build.gradle
@@ -3,6 +3,7 @@ plugins {
 }
 
 new RoboJavaModulePlugin(
+        artifactName: 'shadows-support-v4',
         deploy: true
 ).apply(project)
 
@@ -43,13 +44,6 @@ dependencies {
     testRuntime "com.android.support:support-core-ui:26.0.0-alpha1"
     testRuntime "com.android.support:support-core-utils:26.0.0-alpha1"
     testRuntime "com.android.support:support-fragment:26.0.0-alpha1"
-}
-
-// change local artifact name to match dependencies
-install {
-    repositories.mavenInstaller {
-        pom.artifactId = 'shadows-support-v4'
-    }
 }
 
 // hamcrest needs to come before junit on runtime classpath; the gradle IntelliJ plugin
