Update Robolectric to build with AS3.0 AGP
1) Update Gradle Version to 4.0
2) Add Google Maven Repo for Android dependencies (will save us
installing them in install-dependencies.rb)
3) Convert dependency-on-stubs project to a "com.android.library"
project which will build with the stubs (saves us installing stubs jar
into local maven repo) - This project could be repurposed as an
integration test for AGP.
4) Remove dependency on support lib from mockito integration project.

--- a/integration_tests/dependency-on-stubs/build.gradle
+++ b/integration_tests/dependency-on-stubs/build.gradle
@@ -2,14 +2,21 @@ plugins {
     id "net.ltgt.errorprone" version "0.0.11"
 }
 
-apply plugin: RoboJavaModulePlugin
+apply plugin: 'com.android.library'
 
 // test with a project that depends on the stubs jar, not org.robolectric:android-all
+android {
+    compileSdkVersion 26
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
+}
 
 dependencies {
     compile project(":robolectric")
     compile "junit:junit:4.12"
-    testCompile "com.google.android:android-stubs:26"
 
     // Testing dependencies
     testCompile "org.assertj:assertj-core:3.8.0"
