--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ android:
     - platform-tools
     - build-tools-23.0.3
     - android-23
+    - android-26
     - extra-google-m2repository
     - extra-android-m2repository
     - addon-google_apis-google-23
