--- a/shadows/maps/build.gradle
+++ b/shadows/maps/build.gradle
@@ -13,7 +13,7 @@ shadows {
 }
 
 dependencies {
-    compileOnly project(":shadows/framework")
+    compileOnly project(":shadows:framework")
 
     compileOnly AndroidSdk.MAX_SDK.coordinates
     compile "com.ibm.icu:icu4j:53.1"
