--- a/shadows/playservices/build.gradle
+++ b/shadows/playservices/build.gradle
@@ -13,7 +13,7 @@ shadows {
 }
 
 dependencies {
-    compileOnly project(":shadows/framework")
+    compileOnly project(":shadows:framework")
 
     compileOnly "com.android.support:support-fragment:26.0.0-alpha1"
     compileOnly "com.google.android.gms:play-services-base:8.4.0"
