--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,7 @@ include ":junit"
 include ":utils"
 include ":processor"
 include ":resources"
+include ":buildSrc"
 include ":annotations"
 include ":shadows/framework"
 include ":shadows/httpclient"
