--- a/shadows/multidex/build.gradle
+++ b/shadows/multidex/build.gradle
@@ -2,29 +2,39 @@ plugins {
     id "net.ltgt.errorprone" version "0.0.11"
 }
 
-new RoboJavaModulePlugin(
-        deploy: true
-).apply(project)
+apply plugin: 'com.android.library'
 
-apply plugin: ShadowsPlugin
+android {
+    defaultConfig {
+        javaCompileOptions {
+            annotationProcessorOptions {
+                className 'org.robolectric.annotation.processing.RobolectricProcessor'
+                arguments = [ 'org.robolectric.annotation.processing.shadowPackage' : 'org.robolectric.shadows.multidex' ]
+            }
+        }
+    }
 
-shadows {
-    packageName "org.robolectric.shadows.multidex"
+    compileSdkVersion 26
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 }
 
 dependencies {
+    annotationProcessor project(":processor")
+
     compileOnly project(":shadows:framework")
-
-    compileOnly "com.android.support:multidex:1.0.1"
-
-    compileOnly AndroidSdk.MAX_SDK.coordinates
+    compileOnly "com.android.support:multidex:1.0.2"
 
     testCompile project(":robolectric")
 }
 
+// TODO - Figure out how to migrate this
 // change local artifact name to match dependencies
-install {
-    repositories.mavenInstaller {
-        pom.artifactId = 'shadows-multidex'
-    }
-}
+//install {
+//    repositories.mavenInstaller {
+//        pom.artifactId = 'shadows-multidex'
+//    }
+//}
