--- a/shadows/supportv4/build.gradle
+++ b/shadows/supportv4/build.gradle
@@ -16,7 +16,7 @@ android {
 
     compileSdkVersion 26
     testOptions {
-        unitTests {
+            unitTests {
             includeAndroidResources = true
         }
     }
@@ -32,11 +32,11 @@ dependencies {
     compileOnly project(":robolectric")
     compileOnly project(":shadows:framework")
 
-    compileOnly "com.android.support:support-v4:26.0.0-alpha1"
-    compileOnly "com.android.support:support-compat:26.0.0-alpha1"
-    compileOnly "com.android.support:support-core-ui:26.0.0-alpha1"
-    compileOnly "com.android.support:support-core-utils:26.0.0-alpha1"
-    compileOnly "com.android.support:support-fragment:26.0.0-alpha1"
+    compileOnly "com.android.support:support-v4:26.0.0"
+    compileOnly "com.android.support:support-compat:26.0.0"
+    compileOnly "com.android.support:support-core-ui:26.0.0"
+    compileOnly "com.android.support:support-core-utils:26.0.0"
+    compileOnly "com.android.support:support-fragment:26.0.0"
 
     testCompile project(":robolectric")
     testCompile "junit:junit:4.12"
@@ -45,11 +45,11 @@ dependencies {
     testCompile "org.mockito:mockito-core:2.5.4"
 
     earlyTestRuntime "org.hamcrest:hamcrest-junit:2.0.0.0"
-    testCompile "com.android.support:support-v4:26.0.0-alpha1"
-    testCompile "com.android.support:support-compat:26.0.0-alpha1"
-    testCompile "com.android.support:support-core-ui:26.0.0-alpha1"
-    testCompile "com.android.support:support-core-utils:26.0.0-alpha1"
-    testCompile "com.android.support:support-fragment:26.0.0-alpha1"
+    testCompile "com.android.support:support-v4:26.0.0"
+    testCompile "com.android.support:support-compat:26.0.0"
+    testCompile "com.android.support:support-core-ui:26.0.0"
+    testCompile "com.android.support:support-core-utils:26.0.0"
+    testCompile "com.android.support:support-fragment:26.0.0"
 }
 
 // TODO - Figure out how to migrate this
