--- a/shadows/httpclient/build.gradle
+++ b/shadows/httpclient/build.gradle
@@ -2,48 +2,43 @@ plugins {
     id "net.ltgt.errorprone" version "0.0.11"
 }
 
-new RoboJavaModulePlugin(
-        deploy: true
-).apply(project)
+apply plugin: 'com.android.library'
 
-apply plugin: ShadowsPlugin
+android {
+    defaultConfig {
+        javaCompileOptions {
+            annotationProcessorOptions {
+                className 'org.robolectric.annotation.processing.RobolectricProcessor'
+                arguments = [ 'org.robolectric.annotation.processing.shadowPackage' : 'org.robolectric.shadows.httpclient' ]
+            }
+        }
+    }
 
-shadows {
-    packageName "org.robolectric.shadows.httpclient"
-}
-
-configurations {
-    earlyRuntime
+    compileSdkVersion 22
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 }
 
 dependencies {
-    // Project dependencies
+    annotationProcessor project(":processor")
     compileOnly project(":shadows:framework")
 
-    // Compile dependencies
-    earlyRuntime "org.apache.httpcomponents:httpcore:4.0.1"
-    compile "org.apache.httpcomponents:httpclient:4.0.3"
-    compileOnly(AndroidSdk.LOLLIPOP_MR1.coordinates) { force = true }
+    compile 'commons-logging:commons-logging-api:1.1'
 
     // Testing dependencies
     testCompile project(":robolectric")
     testCompile "junit:junit:4.12"
     testCompile "org.assertj:assertj-core:3.8.0"
     testCompile "org.mockito:mockito-core:2.5.4"
-    testRuntime AndroidSdk.LOLLIPOP_MR1.coordinates
 }
 
+// TODO - Figure out how to migrate this
 // change local artifact name to match dependencies
-install {
-    repositories.mavenInstaller {
-        pom.artifactId = 'shadows-httpclient'
-    }
-}
-
-// httpcore needs to come before android-all on runtime classpath; the gradle IntelliJ plugin
-//   needs the compileClasspath order patched too (bug?)
-sourceSets.main.compileClasspath = configurations.earlyRuntime + sourceSets.main.compileClasspath
-sourceSets.main.runtimeClasspath = configurations.earlyRuntime + sourceSets.main.runtimeClasspath
-
-sourceSets.test.compileClasspath = configurations.earlyRuntime + sourceSets.test.compileClasspath
-sourceSets.test.runtimeClasspath = configurations.earlyRuntime + sourceSets.test.runtimeClasspath
+//install {
+//    repositories.mavenInstaller {
+//        pom.artifactId = 'shadows-httpclient'
+//    }
+//}
