--- a/settings.gradle
+++ b/settings.gradle
@@ -14,7 +14,7 @@ include ":shadows:multidex"
 include ":shadows:playservices"
 include ":shadows:supportv4"
 include ":shadowapi"
-include ":integration_tests:dependency-on-stubs"
+//include ":integration_tests:dependency-on-stubs"
 include ":integration_tests:libphonenumber"
 include ":integration_tests:mockito"
 include ":integration_tests:mockito-experimental"
