--- a/.travis.yml
+++ b/.travis.yml
@@ -15,18 +15,15 @@ android:
   components:
     - tools
     - platform-tools
-    - build-tools-23.0.3
-    - android-23
+    - build-tools-26.0.1
     - android-26
+    - extra-android-support
     - extra-google-m2repository
     - extra-android-m2repository
     - addon-google_apis-google-23
 
 # to install locally, use:
 #  > android update sdk --no-ui --all --filter <component name>
-
-before_install:
-  - ./scripts/install-dependencies.rb
 
 script:
   - ./gradlew clean assemble install compileTest --info --stacktrace
