--- a/shadows/supportv4/build.gradle
+++ b/shadows/supportv4/build.gradle
@@ -14,6 +14,7 @@ android {
         }
     }
 
+    buildToolsVersion '26.0.1'
     compileSdkVersion 26
     testOptions {
             unitTests {
