--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ android:
     - tools
     - platform-tools
     - build-tools-26.0.1
+    - android-22
     - android-26
     - extra-android-support
     - extra-google-m2repository
