--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -17,7 +17,7 @@ dependencies {
     compile "com.google.code.gson:gson:2.8.0"
     compile 'ch.raffael.pegdown-doclet:pegdown-doclet:1.3'
 
-    compile files("${System.properties['java.home']}/../lib/tools.jar")
+    compile files(org.gradle.internal.jvm.Jvm.current().getToolsJar())
 
     // Testing dependencies
     testCompile "junit:junit:4.12"
