Remove minJdkVersion property from AndroidSdk
JDK 1.8 is required for Robolectric since version 3.4. There was logic
in AndroidSdk.groovy to support different JDK versions when running
Robolectric's tests. Remove this logic as well as logic in build files
that selected the most recent Android SDK version given the current Java
version.

--- a/integration_tests/powermock/build.gradle
+++ b/integration_tests/powermock/build.gradle
@@ -10,7 +10,7 @@ dependencies {
     compileOnly AndroidSdk.MAX_SDK.coordinates
 
     // Testing dependencies
-    testRuntime AndroidSdk.MAX_SDK_FOR_THIS_JDK.coordinates
+    testRuntime AndroidSdk.MAX_SDK.coordinates
     testCompile "org.hamcrest:hamcrest-junit:2.0.0.0"
     testCompile "org.assertj:assertj-core:3.8.0"
 
