--- a/integration_tests/mockito/build.gradle
+++ b/integration_tests/mockito/build.gradle
@@ -12,7 +12,7 @@ dependencies {
     compile "com.android.support:support-fragment:26.0.0-alpha1"
 
     // Testing dependencies
-    testRuntime AndroidSdk.MAX_SDK_FOR_THIS_JDK.coordinates
+    testRuntime AndroidSdk.MAX_SDK.coordinates
     testCompile "com.android.support:support-compat:26.0.0-alpha1"
     testCompile "com.android.support:support-fragment:26.0.0-alpha1"
     testCompile "org.assertj:assertj-core:3.8.0"
