--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
     dependencies {
         classpath 'com.netflix.nebula:gradle-aggregate-javadocs-plugin:2.2.+'
         classpath 'ch.raffael.pegdown-doclet:pegdown-doclet:1.3'
-        classpath 'com.android.tools.build:gradle:3.0.0-alpha9'
+        classpath 'com.android.tools.build:gradle:3.0.0-beta6'
     }
 }
 
