Move shadowapi dependency to framework shadows.
Was being pulled in transitively via annotations which didn't need it.

--- a/shadows/framework/build.gradle
+++ b/shadows/framework/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     compile project(":annotations")
     compile project(":resources")
     compile project(":utils")
+    compile project(":shadowapi")
 
     // Compile dependencies
     compileOnly "com.google.code.findbugs:jsr305:3.0.1"
