--- a/integration_tests/mockito-experimental/build.gradle
+++ b/integration_tests/mockito-experimental/build.gradle
@@ -6,12 +6,11 @@ apply plugin: RoboJavaModulePlugin
 
 dependencies {
     compile project(":robolectric")
-    compile "junit:junit:4.12"
     compileOnly AndroidSdk.MAX_SDK.coordinates
 
     // Testing dependencies
     testRuntime AndroidSdk.MAX_SDK.coordinates
-    testCompile "org.hamcrest:hamcrest-core:1.3"
+    testCompile "junit:junit:4.12"
     testCompile "org.assertj:assertj-core:2.0.0"
     testCompile "org.mockito:mockito-core:2.5.4"
 }
