--- a/integration_tests/mockito/build.gradle
+++ b/integration_tests/mockito/build.gradle
@@ -6,15 +6,11 @@ apply plugin: RoboJavaModulePlugin
 
 dependencies {
     compile project(":robolectric")
-    compile "junit:junit:4.12"
     compileOnly AndroidSdk.MAX_SDK.coordinates
-    compile "com.android.support:support-compat:26.0.1"
-    compile "com.android.support:support-fragment:26.0.1"
 
     // Testing dependencies
     testRuntime AndroidSdk.MAX_SDK.coordinates
-    testCompile "com.android.support:support-compat:26.0.1"
-    testCompile "com.android.support:support-fragment:26.0.1"
+    testCompile "junit:junit:4.12"
     testCompile "org.assertj:assertj-core:3.8.0"
     testCompile "org.mockito:mockito-core:2.5.4"
 }
