--- a/integration_tests/powermock/build.gradle
+++ b/integration_tests/powermock/build.gradle
@@ -6,12 +6,11 @@ apply plugin: RoboJavaModulePlugin
 
 dependencies {
     compile project(":robolectric")
-    compile "junit:junit:4.12"
     compileOnly AndroidSdk.MAX_SDK.coordinates
 
     // Testing dependencies
     testRuntime AndroidSdk.MAX_SDK.coordinates
-    testCompile "org.hamcrest:hamcrest-junit:2.0.0.0"
+    testCompile "junit:junit:4.12"
     testCompile "org.assertj:assertj-core:3.8.0"
 
     testCompile "org.powermock:powermock-module-junit4:1.6.2"
